--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
     "description": "Simple backend for contact form",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
-    },
+    "start": "node index.js",
+    "build": "echo 'No build step required'"
+},
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
