Change email credentials in .env.example
Updated email configuration values in .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password-here
-RECEIVER_EMAIL=where-to-send-emails@example.com
+EMAIL_USER=bhuvi.flarenet@gmail.com
+EMAIL_PASS=knju bhnb wmid dkjq
+RECEIVER_EMAIL=bhuvispartiate@gmail.com
 PORT=3000
